--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,20 @@
 }
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .link {
   text-decoration: none;
 }
@@ -30,6 +43,9 @@ ul {
   font-family: var(--primary-font-family);
   font-size: 16px;
   letter-spacing: 0.03em;
+  display: inline-block;
+  border-radius: 4px;
+  text-align: center;
 }
 
 body {
@@ -38,6 +54,13 @@ body {
   color: var(--primary-text-color);
   background-color: var(--white-color);
   font-size: 14px;
+}
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .button.button-secondary {
@@ -56,11 +79,23 @@ body {
   color: var(--white-color);
   background-color: var(--accent-color);
 }
+.section {
+  margin-bottom: 94px;
+}
 
 /* Шапка */
 
 .site-nav .link.current {
   color: var(--accent-color);
+}
+.site-nav .link {
+  display: block;
+}
+.site-nav {
+  display: flex;
+}
+.site-nav-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 /* лого */
@@ -111,6 +146,7 @@ body {
 
 .hero {
   background-color: var(--hero-background-color);
+  text-align: center;
 }
 .button.button-primary {
   font-weight: 700;
@@ -118,6 +154,9 @@ body {
   letter-spacing: 0.06em;
   color: var(--white-color);
   background-color: var(--accent-color);
+  padding: 10px 32px;
+  min-width: 200px;
+  border: 0;
 }
 .button.button-primary:hover,
 .button.button-primary:focus {
@@ -131,6 +170,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-color);
+  margin-bottom: 30px;
 }
 
 /* названия */
@@ -159,18 +199,31 @@ body {
 /* преимущества */
 
 .benefits-title {
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .description {
   line-height: 1.71;
 }
+
+/* деятельность */
+.practice-title {
+  margin-bottom: 50px;
+}
+
 /* сотрудники */
 
 .section-team {
   background-color: var(--secodary-background-color);
+  margin-bottom: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
-
+.section-team-list {
+  margin-top: 50px;
+}
 .name-title {
   font-weight: 500;
   font-size: 16px;
@@ -181,7 +234,13 @@ body {
   font-size: 16px;
   line-height: 1.19;
 }
-
+.section-team-item {
+  padding-bottom: 30px;
+}
+.section-team-item img {
+  display: block;
+  margin-bottom: 30px;
+}
 /* подвал */
 
 .footer {
