--- a/css/styles.css
+++ b/css/styles.css
@@ -238,27 +238,23 @@ body {
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
 }
 
 .project-item {
-  flex-basis: calc(100 / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
-  /* width: 370px; */
-  /* border: 1px solid #eeeeee; */
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
-.card-content{
+.card-content {
   padding: 20px 24px;
-   border: 1px solid #eeeeee;
+  border: 1px solid #eeeeee;
 }
 
-/* .project-item:nth-child(3n) { */
-  /* margin-right: 0; */
+.project-item:nth-child(3n) {
+  margin-right: 0;
 }
-/* .project-item:nth-last-child(-n + 3) { */
-  /* margin-bottom: 30px; */
+.project-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
 }
 
 /* преимущества */
@@ -321,9 +317,13 @@ body {
 .section-team-item:not(:last-child) {
   margin-right: 30px;
 }
+.container-foto {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .name-title {
-  text-align: center;
   margin-bottom: 10px;
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -335,26 +335,28 @@ body {
   text-align: center;
 }
 .section-team-item {
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.section-team-item img {
-  margin-bottom: 30px;
-}
+
 /* подвал */
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--footer-background-color);
 }
 .footer .logo {
+  padding: 0;
+  margin-bottom: 20px;
   color: var(--white-color);
 }
 .footer .logo:hover,
 .footer .logo:link {
   color: var(--accent-color);
 }
+
 .footer-contact .location {
   color: var(--white-color);
 }
@@ -362,6 +364,9 @@ body {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
+}
+.footer-contact-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .footer-contact-mail,
 .footer-contact-phone {
